--- a/qiita.config.json
+++ b/qiita.config.json
@@ -1,5 +1,6 @@
 {
   "includePrivate": false,
   "host": "localhost",
-  "port": 8888
+  "port": 8888,
+  "access_token": "a4526132bdfcb0cac4937b3d74f422073eb28dd7"
 }
